--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "@trpc/next": "^10.36.0",
     "@trpc/react-query": "^10.36.0",
     "@trpc/server": "^10.36.0",
+    "@upstash/ratelimit": "^0.4.3",
+    "@upstash/redis": "^1.22.0",
     "lucide-react": "^0.263.1",
     "next": "^13.4.2",
     "react": "18.2.0",
