--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@prisma/client": "^4.14.1",
+    "@radix-ui/react-popover": "^1.0.6",
     "@t3-oss/env-nextjs": "^0.3.1",
     "@tanstack/react-query": "^4.29.7",
     "@trpc/client": "^10.36.0",
@@ -19,6 +20,7 @@
     "@trpc/server": "^10.36.0",
     "@upstash/ratelimit": "^0.4.3",
     "@upstash/redis": "^1.22.0",
+    "clsx": "^2.0.0",
     "lucide-react": "^0.263.1",
     "next": "^13.4.2",
     "react": "18.2.0",
